Config can be used as primary shard even in cluster with dedicated config server

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.3.3, 7.0.12
    • Affects Version/s: 7.2.1, 7.0.6, 7.3.0-rc4
    • Component/s: None
    • None
    • Cluster Scalability
    • Fully Compatible
    • ALL
    • v7.0
    • Cluster Scalability 2024-4-1, Cluster Scalability 2024-4-15, Cluster Scalability 2024-4-29, Cluster Scalability 2024-5-13, Cluster Scalability 2024-5-27
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      As seen in BF-32209, it's possible to specify "config" as the shard name to the enableSharding command. The command will fail, but if the database did not yet exist an entry will still be inserted into config.databases with the config shard as the primary shard for the database. This can eventually lead to crashes (see this comment).

      Similarly, "config" can be specified as the toShard in the moveRange command, which will also crash the config server.

            Assignee:
            Brett Nawrocki
            Reporter:
            Brett Nawrocki
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: