SERVER-88172 Prevent usages of config as shard (#22457)

GitOrigin-RevId: 2da728ac231d530e73af41ee9ea53d283966c179