src/mongo/db/s/migration_destination_manager_commands.cpp
@@ -45,6 +45,7 @@
 #include "mongo/db/auth/authorization_session.h"
 #include "mongo/db/auth/resource_pattern.h"
 #include "mongo/db/catalog_raii.h"
+#include "mongo/db/catalog_shard_feature_flag_gen.h"
 #include "mongo/db/commands.h"
 #include "mongo/db/concurrency/lock_manager_defs.h"
 #include "mongo/db/database_name.h"
@@ -148,6 +149,13 @@ public:
                    BSONObjBuilder& result) override {
         opCtx->setAlwaysInterruptAtStepDownOrUp_UNSAFE();
         ShardingState::get(opCtx)->assertCanAcceptShardedCommands();
+
+        // (Ignore FCV check): gFeatureFlagTransitionToCatalogShard was enabled in a previous
+        // version and then disabled again, so it does not properly participate in the FCV protocol.
+        uassert(ErrorCodes::ShardNotFound,
+                "Config is unable to receive chunks",
+                gFeatureFlagTransitionToCatalogShard.isEnabledAndIgnoreFCVUnsafe() ||
+                    ShardingState::get(opCtx)->shardId() != ShardId::kConfigServerId);
 
         auto nss = parseNs(dbName, cmdObj);
 
